--- a/src/index.css
+++ b/src/index.css
@@ -313,6 +313,31 @@ video {
   }
 }
 
+@media screen and (max-width: 500px) {
+
+  .navbar.nav-total .navbar-toggler {
+    transition: all 0.25s;
+    position: relative;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    border: none;
+  }
+  
+  .navbar.nav-total .navbar-toggler::before {
+    width: 25px !important;
+    height: 3px !important;
+    transform: translateY(-8px);
+    box-shadow: 0 8px 0 var(--mainColor);
+  }
+  
+  .navbar.nav-total .navbar-toggler::after {
+    width: 25px !important;
+    height: 3px !important;
+    transform: translateY(8px);
+  }
+}
+
 /* header-home */
 
 .total-header {
@@ -459,7 +484,6 @@ video {
       font-size: 2rem;
   }
 
-  
 .caption p {
   font-size: 16px;
 }
@@ -469,8 +493,23 @@ video {
   }
 
   .buttons a, .buttons button {
-    font-size: 16px;
+    font-size: 13px;
     width: 100%;
+  }
+}
+
+@media screen and (max-width: 390px) {
+
+  .caption h1 {
+    font-size: 1.8rem;
+  }
+
+  .caption p {
+  font-size: 14px;
+  }
+
+  .buttons a, .buttons button {
+    font-size: 12px;
   }
 }
 
@@ -587,7 +626,8 @@ video {
   color: var(--mainColor);
 }
 
-.caption-app a{
+.caption-app a,
+.caption-app button {
   padding-top: 12px;
   padding-bottom: 12px;
 }
@@ -610,8 +650,9 @@ video {
 }
 
 @media screen and (max-width: 768px) {
-  .caption-app a{
-    width: 100% !important;
+  .caption-app a,
+  .caption-app button {
+      width: 100% !important;
   }
 
   .caption-app .parag p{
@@ -653,6 +694,7 @@ video {
   border-right: 5px solid transparent;
   transition: all 0.25s;
 }
+
 .cont-price h4{
   padding: 0 2rem;
   font-size: 1.6rem;
@@ -662,6 +704,7 @@ video {
   /* color: #000; */
   color: var(--mainColor);
 }
+
 .cont-price .salary{
   color: #00000080;
   text-align: center;
@@ -691,6 +734,14 @@ video {
   }
 }
 
+@media screen and (max-width: 500px) {
+  .cont-price h4{
+    padding: 0 1.25rem;
+    font-size: 1.25rem;
+    padding-bottom: 0.75rem;
+  }
+}
+
 /* footer */
 
 .cont-imgFooter {
@@ -702,7 +753,7 @@ video {
 }
 
 footer .cont-imgFooter{
-  width: 280px;
+  width: 250px;
   height: 220px;
   margin-bottom: 1rem;
 }
@@ -849,6 +900,11 @@ footer .cont-imgFooter{
   .icons-footer {
       justify-content: center;
   }
+
+  footer .cont-imgFooter{
+    width: 180px;
+    height: 150px;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -858,6 +914,11 @@ footer .cont-imgFooter{
       width: 75%;
       margin-left: auto;
       margin-right: auto;
+  }
+
+  footer .cont-imgFooter{
+    width: 150px;
+    height: 130px;
   }
 }
 
@@ -996,10 +1057,15 @@ form label{
 }
 
 @media screen and (max-width: 768px) {
-
   .input-group input{
     padding-left: 20px !important;
     padding-right: 10px !important;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .check-out .offer .buttons a {
+    width: 50%;
   }
 }
 
@@ -1038,6 +1104,80 @@ form label{
   }
 }
 
+/* join page */
+
+.form-contact .form{
+  background: #FFFFFF;
+  box-shadow: 0px 0px 50px rgba(204, 204, 204, 1);
+  border-radius: 24px;
+}
+
+.form-contact label{
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.form-contact input{
+  border-radius: 8px !important;
+  background-color: #f3f3f3 !important;
+}
+
+.form-contact .buttons{
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.form-contact .buttons button{
+  /* width: 40%; */
+  font-size: 18px;
+  font-weight: 500;
+}
+
+@media screen and (max-width: 992px){
+
+  .form-contact .buttons{
+    margin-top: 2rem !important;
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 768px){
+  
+  .form-contact .form {
+    padding-right: 30px !important;
+    padding-left: 30px !important;
+    width: 85% !important;
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+
+@media screen and (max-width: 500px) {
+
+  .form-contact .main-title h2 {
+    font-size: 18px;
+  }
+
+  .form-contact .main-title p {
+    font-size: 14px;
+  }
+
+  .form-contact label{
+    font-size: 16px;
+  }
+
+  .form-contact .buttons {
+    width: 60%;
+  }
+
+  .form-contact .buttons button{
+    font-size: 14px;
+  }
+}
+
+
+
 /* not-found page */
 
 .img-notfound {
@@ -1065,16 +1205,12 @@ form label{
 
 .sidebar {
   position: fixed;
-  width: 300px;
+  /* width: 300px; */
   height: 100%;
   background-color: var(--mainColor);
-  border-left: 10px solid var(--mainColor);
-  overflow: hidden;
+  padding-left: 10px;
+  overflow-x: hidden;
   transition: all 0.5s;
-}
-
-.sidebar.show-hide {
-  width: 80px;
 }
 
 .sidebar .menu-links {
@@ -1082,7 +1218,7 @@ form label{
 }
 
 .sidebar .menu-links ul>div {
-  margin-bottom: 30px;
+  margin-bottom: 25px;
   margin-top: 15px;
   position: relative;
 }
@@ -1102,14 +1238,9 @@ form label{
 }
 
 .sidebar .menu-links .cont-imgFooter {
-  width: 140px;
-  height: 120px;
+  /* width: 130px;
+  height: 110px; */
   transition: all 0.5s;
-}
-
-.sidebar .menu-links .cont-imgFooter.show-hide {
-  width: 60px;
-  height: 60px;
 }
 
 .sidebar .menu-links ul {
@@ -1153,8 +1284,8 @@ form label{
   position: relative;
   display: block;
   min-width: 60px;
-  height: 60px;
-  line-height: 50px;
+  height: 57px;
+  line-height: 45px;
   text-align: center;
 }
 
@@ -1171,8 +1302,8 @@ form label{
   text-align: center;
   font-size: 18px;
   font-weight: 500;
-  height: 60px;
-  line-height: 60px;
+  height: 57px;
+  line-height: 55px;
   transition: all 0.3s;
 }
 
@@ -1227,16 +1358,11 @@ form label{
 
 .dashboard .main{
   position: absolute;
-  width: calc(100% - 300px);
+  /* width: calc(100% - 300px);
+  left: 300px; */
   min-height: 100vh;
-  left: 300px;
   transition: all 0.5s;
   padding: 0 10px;
-}
-
-.dashboard .main.show-hide {
-  width: calc(100% - 80px);
-  left: 80px;
 }
 
 .dashboard .main .topbar {
@@ -1312,90 +1438,10 @@ form label{
 
 /* responsive sidebar & navbar outlet */
 
-@media screen and (max-width: 1200px) {
-  .dashboard .main .topbar .search-topbar {
-    width: 650px;
-  }
-}
-
-@media screen and (max-width: 991px) {
-
-  .sidebar .menu-links .cont-imgFooter.show-hide {
-    width: 140px;
-    height: 120px;
-  }
-
-  .sidebar {
-    width: 230px;
-    left: -230px
-  }
-
-  .sidebar .menu-links ul>div {
-    margin-bottom: 20px;
-  }
-
-  .sidebar .menu-links ul>div .closeSidebar {
-    display: flex;
-  }
-
-  .sidebar.show-hide {
-    width: 230px;
-    left: 0;
-  }
-
-  .dashboard .main {
-    width: 100%;
-    left: 0;
-  }
-
-  .dashboard .main.show-hide {
-    width: calc(100% - 230px);
-    left: 230px;
-  }
-}
-
-@media screen and (min-width: 700px) and (max-width: 950px) {
-  .dashboard .main.show-hide .topbar .search-topbar {
-    width: 400px;
-  }
-}
-
-@media screen and (min-width: 570px) and (max-width: 700px){
-  .dashboard .main.show-hide .topbar .search-topbar {
-    width: 300px;
-  }
-
-  .dashboard .main.show-hide .topbar .user-img {
-    width: 50px;
-    height: 50px;
-  }
-}
-
-@media screen and (min-width: 570px) and (max-width: 768px) {
-  .dashboard .main .topbar .search-topbar {
-    width: 500px;
-  }
-}
-
 @media screen and (max-width: 570px) {
 
   .sidebar {
     z-index: 999;
   }
 
-  .dashboard .main.show-hide {
-    width: 100%;
-    left: 0;
-  }
-
-  .dashboard .main .topbar .search-topbar {
-    width: 350px;
-  }
-
-}
-
-@media screen and (max-width: 400px) {
-  .dashboard .main .topbar .search-topbar {
-    width: 300px;
-  }
 }
