add update client

--- a/src/index.css
+++ b/src/index.css
@@ -1264,7 +1264,7 @@ form label{
 
 .sidebar .menu-links ul>div {
   margin-bottom: 25px;
-  margin-top: 15px;
+  /* margin-top: 15px; */
   position: relative;
 }
 
