--- a/src/index.css
+++ b/src/index.css
@@ -2094,3 +2094,36 @@ tfoot {
   background-color: #012C57 !important;
   color: var(--white) !important;
 }
+
+.ant-select {
+  background-color: var(--input) !important;
+  outline: none !important;
+  border: none !important;
+  border-radius: 12px !important;
+}
+
+.ant-select-selector {
+  background-color: transparent !important;
+  /* border: none !important; */
+  height: 100% !important;
+  padding: 6px 10px !important;
+  border-radius: 12px !important;
+}
+
+.ant-select-selection-placeholder {
+  color: #000 !important;
+  font-weight: 500 !important;
+  padding-left: 4px !important;
+}
+
+.ant-select-selection-search-input {
+  height: 100% !important;
+}
+
+.ant-select-selection-search input {
+  font-weight: 500 !important;
+}
+
+.input-group input::placeholder {
+  color: rgba(0, 0, 0, 0.6) !important;
+}
